fix: massive bugfix and added features
