# app/docs/swagger.json
@@ -1192,6 +1192,227 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create a gradetype",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gradetype"
+                ],
+                "summary": "Create a gradetype",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Gradetype"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Gradetype"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            }
+        },
+        "/gradetypes/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update a gradetype",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "grapetype"
+                ],
+                "summary": "Update a gradetype",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Gradetype"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "GradeType ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Gradetype"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete a gradetype",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gradetypes"
+                ],
+                "summary": "Delete a gradetype",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "GradeType ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            }
+        },
+        "/gradetypes/{id}/": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get a specific gradetype",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gradetype"
+                ],
+                "summary": "Get a specific gradetype",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "GradeType ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Gradetype"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
             }
         },
         "/modules": {
@@ -1346,6 +1567,63 @@
                 }
             }
         },
+        "/onboarding": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Set start year and curriculumId as student by userinfo from accesstoken",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meta",
+                    "curriculums",
+                    "users"
+                ],
+                "summary": "Set start year and curriculumId as student",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Curriculum ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.User"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.ApiError"
+                        }
+                    }
+                }
+            }
+        },
         "/states": {
             "get": {
                 "security": [
@@ -1457,6 +1735,32 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
+                }
+            }
+        },
+        "models.Class": {
+            "type": "object",
+            "properties": {
+                "classStartYear": {
+                    "type": "string"
+                },
+                "courseId": {
+                    "type": "integer"
+                },
+                "courseVersion": {
+                    "type": "integer"
+                },
+                "examEvaluations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ExamEvaluation"
+                    }
+                },
+                "students": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
                 }
             }
         },
@@ -1628,7 +1932,63 @@
                     "type": "string"
                 },
                 "weighting": {
-                    "type": "number"
+                    "type": "integer"
+                }
+            }
+        },
+        "models.ExamEvaluation": {
+            "type": "object",
+            "properties": {
+                "created": {
+                    "type": "string"
+                },
+                "deleted": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "entryDate": {
+                    "type": "string"
+                },
+                "exam": {
+                    "$ref": "#/definitions/models.Exam"
+                },
+                "examID": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "originalValue": {
+                    "type": "string"
+                },
+                "orignialGradeTyp": {
+                    "$ref": "#/definitions/models.Gradetype"
+                },
+                "orignialGradeTypeID": {
+                    "type": "integer"
+                },
+                "registeredBy": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "registeredByID": {
+                    "type": "integer"
+                },
+                "selectedCourse": {
+                    "$ref": "#/definitions/models.SelectedCourse"
+                },
+                "selectedCourseClassStartyear": {
+                    "type": "string"
+                },
+                "selectedCourseCourseID": {
+                    "type": "integer"
+                },
+                "selectedCourseCourseVersion": {
+                    "type": "integer"
+                },
+                "selectedCourseUserID": {
+                    "type": "integer"
+                },
+                "updated": {
+                    "type": "string"
                 }
             }
         },
@@ -1922,7 +2282,21 @@
             }
         },
         "models.StudentCurriculums": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "curriculum": {
+                    "description": "Curriculumtype Curriculumtype // this is already in the curriculum",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Curriculum"
+                        }
+                    ]
+                },
+                "startYear": {
+                    "description": "taken from the user or selectedcourse",
+                    "type": "string"
+                }
+            }
         },
         "models.StudyStage": {
             "type": "object",
@@ -1948,7 +2322,21 @@
             }
         },
         "models.TeacherCourses": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "classes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Class"
+                    }
+                },
+                "courses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Course"
+                    }
+                }
+            }
         },
         "models.User": {
             "type": "object",
@@ -1958,6 +2346,9 @@
                 },
                 "created": {
                     "type": "string"
+                },
+                "curriculumId": {
+                    "type": "integer"
                 },
                 "deleted": {
                     "$ref": "#/definitions/gorm.DeletedAt"
